--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'roboto', sans-serif; 
+    font-family: 'roboto', sans-serif;
 }
 
 .container {
     max-width: 1024px;
     width: 100%;
     margin: 0 auto;
-    
+
 }
 
 header {
@@ -45,19 +45,19 @@ section {
     padding: 48px 0;
 }
 
-section h2{
+section h2 {
     margin-bottom: 16px;
-    border-bottom: 2px solid rgb(13, 167, 54) ;
+    border-bottom: 2px solid rgb(13, 167, 54);
     padding: 16px;
     color: rgb(13, 167, 54);
 }
 
 section img {
-margin-right: 32px;
-max-width: 35%;
+    margin-right: 32px;
+    max-width: 35%;
 }
 
-.lista-produtos{
+.lista-produtos {
     display: flex;
 }
 
@@ -65,7 +65,7 @@ max-width: 35%;
     max-width: 1024px;
     width: 100%;
     margin: 0 auto;
-    
+
 }
 
 .lista-produtos {
@@ -110,53 +110,71 @@ max-width: 35%;
 @media screen and (max-width: 767px) {
     .container {
         max-width: 90%;
-                
     }
 
-.container img {
-    max-width: 100%;
-    
-}
+    .container img {
+        max-width: 100%;
+
+    }
+
+    .lista-produtos {
+        flex-wrap: wrap;
+        
+    }
+
+    .lista-produtos li {
+        max-width: 100%;
+        padding:16px;
+        
+    }
+
 
     .produtos {
-            max-width: 90%;
-            display: block;
-            
+        max-width: 90%;
+        display: block;
+
     }
-    
-    
 
     header .container,
     section .container {
-    flex-direction: column;
+        flex-direction: column;
     }
 
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 
-.container {
-    max-width: 90%;
-}
+    .container {
+        max-width: 90%;
+    }
 
-.container img {
-    max-width: 100%;
-    
-}
+    .container img {
+        max-width: 100%;
+        margin-left: 12px;
+
+    }
 
     .produtos {
-            max-width: 90%;
-            display: block;
-            
+        max-width: 100%;
+        display: block;
+
     }
-    
-    
+
+    .lista-produtos {
+        flex-wrap: wrap;
+    }
+
+    .lista-produtos li {
+        max-width: 100%;
+        padding: 16px;
+    }
+
+
     header .container,
     section .container {
-    flex-direction: column;
+        flex-direction: column;
     }
 
 
 
 }
-    
